<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">TangerangMaps</string>
    <string name="tab_map">Map</string>
    <string name="tab_ar">Camera</string>
    <string name="tab_dashboard">Categories</string>
    <string name="tab_addlocation">Add POI</string>
    <string name="tab_news">News</string>
    <string name="google_map_api_key">0AHAjGk0fl23w8ackgdEdYqm5tzeBfnKxB-F7cQ</string>
    
    <!-- For Action Bar -->
    <string name="acb_direction">Direction</string>
    
    <!-- for dasboard -->
    <string name="apotik">Apotik</string>
    <string name="bank">Bank</string>
    <string name="hotel">Hotel</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="lain">Lain-lain</string>
    <string name="pasar">Pasar</string>
    <string name="polisi">Polisi</string>
    <string name="pos">Kantor Pos</string>
    <string name="puskesmas">Puskesmas</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="rumah_bersalin">Rumah Bersalin</string>
    <string name="sd">SD</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="tk">TK</string>
    <string name="universitas">Universitas</string>
    <string name="swalayan">Swalayan</string>
    <string name="transportasi">Transportasi</string>
    <string name="wisata">Wisata</string>
    <string name="perumahan">Perumahan</string>
    <string name="wisma">Wisma</string>
    <string name="apartement">Apartement</string>
    <string name="instansi">Instansi Pemerintah</string>
    <string name="others">Others</string>
    <string name="spbu">SPBU</string>
    <string name="terminal">Terminal</string>
    <string name="stasiun">Stasiun</string>
    <string name="bandara">Bandar Udara</string>
    
    <!-- for addlocation layout -->
    <string name="nama">Nama: *</string>
    <string name="kategori">Kategori: *</string>
    <string name="alamat">Alamat: *</string>
    <string name="lokasi">Lokasi: *</string>
    <string name="txtkecamatan">Kecamatan: </string>
    <string name="txtkelurahan">Kelurahan: </string>
    <string name="telp">Telepon: </string>
    <string name="fax">Fax: </string>
    <string name="email">EMail: </string>
    <string name="website">Website: </string>
    <string name="keterangan">Keterangan: </string>
    <string name="note">(*) Wajib di isi</string>
    <string name="ceklokasi">Cek Lokasi</string>
    <string name="lbl_tombol">Tambah</string>
    
    <string name="pilih_list_kategori">Pilih Kategori</string>
    <string-array name="list_kategori">
    	<item>Apotik</item>
    	<item>Bank</item>
    	<item>Sekolah</item>
    	<item>Rumah Sakit</item>
    </string-array>
    
    <!-- For Camera Layar -->
     <string name="layer_name">tangerangmaps</string>
    
    <string name="layar_not_available">Untuk menjalankan fitur ini, anda harus menginstall Layar terlebih dahulu.</string>
    <string name="layar_market">Install dari Android Market</string>
    <string name="layar_cancel">Cancel</string>
    
    <!-- For Map Activity -->
    <string name="api_key">0AHAjGk0fl23lBazYV4q-6YMXESM2yEzEJZRIEw</string>
    
    <!-- For Home -->
    <string name="aboutTangerang">About Tangerang</string>
    <string name="categories">Categories</string>
    <string name="transportRoute">Transport Route</string>
    <string name="liveView">Live View</string>
    <string name="keyTelephone">Key Telephone</string>
    
    <!-- For Categories -->
    <string name="gov">Goverment</string>
    <string name="street">Street</string>
    <string name="edu">Education</string>
    <string name="health">Health</string>
    <string name="living">Living</string>
    <string name="transportation">Transportation</string>
    <string name="bank">Bank n ATM</string>
    <string name="shopping">Shopping</string>
    <string name="culinary">Culinary</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>
    <string name="entertaiment">Entertaiment</string>
    <string name="service">Public Service</string>
    <string name="facility">Public Facility</string>
    
    <!-- For subCategories -->
    <string name="tentang_judul">About TM</string>
    <string name="tentang_label">About TM</string>
</resources>
