<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@color/white">
  <!-- <GridView
	  android:id="@+id/gridCategories"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:horizontalSpacing="10dip"
	  android:verticalSpacing="20dip"
	  android:layout_marginTop="10dip"
	  android:layout_weight="1"/> -->
	<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dip">
            <Button 
            	android:id="@+id/btnStreet"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/street"
                android:drawableTop="@drawable/btn_street"/>
            <Button android:id="@+id/btnGoverment"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/gov"
                android:drawableTop="@drawable/btn_goverment"/>
    	</LinearLayout>
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dip">
            <Button 
            	android:id="@+id/btnEducation"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/edu"
                android:drawableTop="@drawable/btn_education"/>
            <Button android:id="@+id/btnHealth"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/health"
                android:drawableTop="@drawable/btn_health"/>
    	</LinearLayout>
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dip">
            <Button 
            	android:id="@+id/btnLiving"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/living"
                android:drawableTop="@drawable/btn_living"/>
            <Button android:id="@+id/btnTransportation"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/transportasi"
                android:drawableTop="@drawable/btn_transportation"/>
    	</LinearLayout>
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dip">
            <Button 
            	android:id="@+id/btnBank"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/bank"
                android:drawableTop="@drawable/btn_bank"/>
            <Button android:id="@+id/btnShopping"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/shopping"
                android:drawableTop="@drawable/btn_shopping"/>
    	</LinearLayout>
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dip">
            <Button 
            	android:id="@+id/btnCulinary"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/culinary"
                android:drawableTop="@drawable/btn_culinary"/>
            <Button android:id="@+id/btnSport"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/sport"
                android:drawableTop="@drawable/btn_sport"/>
    	</LinearLayout>
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dip">
            <Button 
            	android:id="@+id/btnTravel"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/travel"
                android:drawableTop="@drawable/btn_travel"/>
            <Button android:id="@+id/btnEntertaiment"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/entertaiment"
                android:drawableTop="@drawable/btn_entertaiment"/>
    	</LinearLayout>
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dip">
            <Button 
            	android:id="@+id/btnService"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/service"
                android:drawableTop="@drawable/btn_service"/>
            <Button android:id="@+id/btnFacility"
                style="@style/HomeButton"
                android:onClick="btnEvent"
                android:text="@string/facility"
                android:drawableTop="@drawable/btn_facility"/>
    	</LinearLayout>
   </LinearLayout>
   </ScrollView>
</LinearLayout>
